y.output
   0  $accept : program $end

   1  program : first_func_def extdefs
   2          | extdefs_no_func first_func_def extdefs
   3          | first_func_def
   4          | extdefs_no_func first_func_def

   5  var : IDEN indexs
   6      | IDEN

   7  extdefs_no_func : extdefs_no_func extdef_no_func
   8                  | extdef_no_func

   9  extdef_no_func : type IDEN '(' para_in ')' ';'
  10                 | VOID IDEN '(' para_in ')' ';'
  11                 | type iden_list_init ';'
  12                 | CONST type const_iden_list ';'

  13  iden_list_init : iden_list_init ',' IDEN
  14                 | iden_list_init ',' IDEN init
  15                 | iden_list_init ',' IDEN indexs_dec array_init
  16                 | iden_list_init ',' IDEN indexs_dec
  17                 | IDEN init
  18                 | IDEN
  19                 | IDEN indexs_dec array_init
  20                 | IDEN indexs_dec

  21  const_iden_list : const_iden_list ',' IDEN const_init
  22                  | IDEN const_init

  23  const_init : '=' literal

  24  extdefs : extdefs extdef
  25          | extdef

  26  extdef : type IDEN '(' para_in ')' ';'
  27         | VOID IDEN '(' para_in ')' ';'
  28         | func_def
  29         | type iden_list_init ';'
  30         | CONST type const_iden_list ';'

  31  decs_x :
  32         | decs

  33  decs : decs dec
  34       | dec

  35  dec : type iden_list_init ';'
  36      | CONST type const_iden_list ';'

  37  expr_x :
  38         | expr

  39  expr : literal
  40       | var
  41       | var PLUSPLUS
  42       | var MINUSMINUS
  43       | IDEN '(' exprs_comma_x ')' ';'
  44       | var '=' IDEN '(' exprs_comma_x ')' ';'
  45       | expr '+' expr
  46       | expr '-' expr
  47       | expr '*' expr
  48       | expr '/' expr
  49       | expr '%' expr
  50       | expr '>' expr
  51       | expr '<' expr
  52       | expr GE expr
  53       | expr LE expr
  54       | expr EQUAL expr
  55       | expr NOTEQUAL expr
  56       | NOT expr
  57       | expr ANDAND expr
  58       | expr OROR expr
  59       | '-' expr
  60       | '(' expr ')'

  61  expr_no_invoke : literal
  62                 | var
  63                 | var PLUSPLUS
  64                 | var MINUSMINUS
  65                 | expr '+' expr
  66                 | expr '-' expr
  67                 | expr '*' expr
  68                 | expr '/' expr
  69                 | expr '%' expr
  70                 | expr '>' expr
  71                 | expr '<' expr
  72                 | expr GE expr
  73                 | expr LE expr
  74                 | expr EQUAL expr
  75                 | expr NOTEQUAL expr
  76                 | NOT expr
  77                 | expr ANDAND expr
  78                 | expr OROR expr
  79                 | '-' expr
  80                 | '(' expr ')'

  81  stmts_x :
  82          | stmts

  83  stmts : stmts stmt
  84        | stmt

  85  stmt : var '=' expr
  86       | if_stmt
  87       | while_stmt
  88       | switch_stmt
  89       | for_stmt
  90       | IDEN '(' exprs_comma_x ')' ';'
  91       | RETURN expr ';'
  92       | BREAK ';'
  93       | CONTINUE ';'

  94  if_stmt : IF '(' expr ')' compound
  95          | IF '(' expr ')' compound ELSE compound

  96  while_stmt : WHILE '(' expr ')' compound
  97             | DO compound WHILE '(' expr ')' ';'

  98  for_stmt : FOR '(' expr_x ';' expr_x ';' expr_x ')' compound

  99  switch_stmt : SWITCH '(' IDEN ')' '{' cases default_x '}'

 100  cases : cases case
 101        | case

 102  case : CASE CHAR_LIT ':' stmts_x
 103       | CASE INT_LIT ':' stmts_x

 104  default_x :
 105            | DEFAULT ':' stmts_x

 106  first_func_def : type IDEN '(' para_in ')' compound
 107                 | VOID IDEN '(' para_in ')' compound

 108  func_def : type IDEN '(' para_in ')' compound
 109           | VOID IDEN '(' para_in ')' compound

 110  compound : '{' decs_x stmts_x '}'

 111  exprs_comma_x :
 112                | exprs_comma

 113  exprs_comma : exprs_comma ',' expr
 114              | expr

 115  exprs_comma_no_invoke_x :
 116                          | exprs_comma_no_invoke

 117  exprs_comma_no_invoke : exprs_comma_no_invoke ',' expr_no_invoke
 118                        | expr_no_invoke

 119  init : '=' expr_no_invoke

 120  array_init : '=' '{' exprs_comma_no_invoke_x '}'

 121  para_in :
 122          | paras

 123  paras : paras ',' para
 124        | para

 125  para : type IDEN indexs_dec
 126       | type IDEN

 127  indexs_dec : indexs_dec index_dec
 128             | index_dec

 129  index_dec : '[' INT_LIT ']'

 130  indexs : indexs index
 131         | index

 132  index : '[' expr ']'

 133  type : INT
 134       | DOUBLE
 135       | CHAR
 136       | BOOL

 137  literal : CHAR_LIT
 138          | INT_LIT
 139          | DOUBLE_LIT
 140          | BOOL_LIT
 141          | STRING_LIT

state 0
	$accept : . program $end  (0)

	INT  shift 1
	DOUBLE  shift 2
	BOOL  shift 3
	CHAR  shift 4
	VOID  shift 5
	CONST  shift 6
	.  error

	program  goto 7
	first_func_def  goto 8
	extdefs_no_func  goto 9
	extdef_no_func  goto 10
	type  goto 11


state 1
	type : INT .  (133)

	.  reduce 133


state 2
	type : DOUBLE .  (134)

	.  reduce 134


state 3
	type : BOOL .  (136)

	.  reduce 136


state 4
	type : CHAR .  (135)

	.  reduce 135


state 5
	extdef_no_func : VOID . IDEN '(' para_in ')' ';'  (10)
	first_func_def : VOID . IDEN '(' para_in ')' compound  (107)

	IDEN  shift 12
	.  error


state 6
	extdef_no_func : CONST . type const_iden_list ';'  (12)

	INT  shift 1
	DOUBLE  shift 2
	BOOL  shift 3
	CHAR  shift 4
	.  error

	type  goto 13


state 7
	$accept : program . $end  (0)

	$end  accept


state 8
	program : first_func_def . extdefs  (1)
	program : first_func_def .  (3)

	INT  shift 1
	DOUBLE  shift 2
	BOOL  shift 3
	CHAR  shift 4
	VOID  shift 14
	CONST  shift 15
	$end  reduce 3

	extdefs  goto 16
	type  goto 17
	extdef  goto 18
	func_def  goto 19


state 9
	program : extdefs_no_func . first_func_def extdefs  (2)
	program : extdefs_no_func . first_func_def  (4)
	extdefs_no_func : extdefs_no_func . extdef_no_func  (7)

	INT  shift 1
	DOUBLE  shift 2
	BOOL  shift 3
	CHAR  shift 4
	VOID  shift 5
	CONST  shift 6
	.  error

	first_func_def  goto 20
	extdef_no_func  goto 21
	type  goto 11


state 10
	extdefs_no_func : extdef_no_func .  (8)

	.  reduce 8


state 11
	extdef_no_func : type . IDEN '(' para_in ')' ';'  (9)
	extdef_no_func : type . iden_list_init ';'  (11)
	first_func_def : type . IDEN '(' para_in ')' compound  (106)

	IDEN  shift 22
	.  error

	iden_list_init  goto 23


state 12
	extdef_no_func : VOID IDEN . '(' para_in ')' ';'  (10)
	first_func_def : VOID IDEN . '(' para_in ')' compound  (107)

	'('  shift 24
	.  error


state 13
	extdef_no_func : CONST type . const_iden_list ';'  (12)

	IDEN  shift 25
	.  error

	const_iden_list  goto 26


state 14
	extdef : VOID . IDEN '(' para_in ')' ';'  (27)
	func_def : VOID . IDEN '(' para_in ')' compound  (109)

	IDEN  shift 27
	.  error


state 15
	extdef : CONST . type const_iden_list ';'  (30)

	INT  shift 1
	DOUBLE  shift 2
	BOOL  shift 3
	CHAR  shift 4
	.  error

	type  goto 28


state 16
	program : first_func_def extdefs .  (1)
	extdefs : extdefs . extdef  (24)

	INT  shift 1
	DOUBLE  shift 2
	BOOL  shift 3
	CHAR  shift 4
	VOID  shift 14
	CONST  shift 15
	$end  reduce 1

	type  goto 17
	extdef  goto 29
	func_def  goto 19


state 17
	extdef : type . IDEN '(' para_in ')' ';'  (26)
	extdef : type . iden_list_init ';'  (29)
	func_def : type . IDEN '(' para_in ')' compound  (108)

	IDEN  shift 30
	.  error

	iden_list_init  goto 31


state 18
	extdefs : extdef .  (25)

	.  reduce 25


state 19
	extdef : func_def .  (28)

	.  reduce 28


state 20
	program : extdefs_no_func first_func_def . extdefs  (2)
	program : extdefs_no_func first_func_def .  (4)

	INT  shift 1
	DOUBLE  shift 2
	BOOL  shift 3
	CHAR  shift 4
	VOID  shift 14
	CONST  shift 15
	$end  reduce 4

	extdefs  goto 32
	type  goto 17
	extdef  goto 18
	func_def  goto 19


state 21
	extdefs_no_func : extdefs_no_func extdef_no_func .  (7)

	.  reduce 7


state 22
	extdef_no_func : type IDEN . '(' para_in ')' ';'  (9)
	iden_list_init : IDEN . init  (17)
	iden_list_init : IDEN .  (18)
	iden_list_init : IDEN . indexs_dec array_init  (19)
	iden_list_init : IDEN . indexs_dec  (20)
	first_func_def : type IDEN . '(' para_in ')' compound  (106)

	'('  shift 33
	'='  shift 34
	'['  shift 35
	';'  reduce 18
	','  reduce 18

	init  goto 36
	indexs_dec  goto 37
	index_dec  goto 38


state 23
	extdef_no_func : type iden_list_init . ';'  (11)
	iden_list_init : iden_list_init . ',' IDEN  (13)
	iden_list_init : iden_list_init . ',' IDEN init  (14)
	iden_list_init : iden_list_init . ',' IDEN indexs_dec array_init  (15)
	iden_list_init : iden_list_init . ',' IDEN indexs_dec  (16)

	';'  shift 39
	','  shift 40
	.  error


state 24
	extdef_no_func : VOID IDEN '(' . para_in ')' ';'  (10)
	first_func_def : VOID IDEN '(' . para_in ')' compound  (107)
	para_in : .  (121)

	INT  shift 1
	DOUBLE  shift 2
	BOOL  shift 3
	CHAR  shift 4
	')'  reduce 121

	type  goto 41
	para_in  goto 42
	paras  goto 43
	para  goto 44


state 25
	const_iden_list : IDEN . const_init  (22)

	'='  shift 45
	.  error

	const_init  goto 46


state 26
	extdef_no_func : CONST type const_iden_list . ';'  (12)
	const_iden_list : const_iden_list . ',' IDEN const_init  (21)

	';'  shift 47
	','  shift 48
	.  error


state 27
	extdef : VOID IDEN . '(' para_in ')' ';'  (27)
	func_def : VOID IDEN . '(' para_in ')' compound  (109)

	'('  shift 49
	.  error


state 28
	extdef : CONST type . const_iden_list ';'  (30)

	IDEN  shift 25
	.  error

	const_iden_list  goto 50


state 29
	extdefs : extdefs extdef .  (24)

	.  reduce 24


state 30
	iden_list_init : IDEN . init  (17)
	iden_list_init : IDEN .  (18)
	iden_list_init : IDEN . indexs_dec array_init  (19)
	iden_list_init : IDEN . indexs_dec  (20)
	extdef : type IDEN . '(' para_in ')' ';'  (26)
	func_def : type IDEN . '(' para_in ')' compound  (108)

	'('  shift 51
	'='  shift 34
	'['  shift 35
	';'  reduce 18
	','  reduce 18

	init  goto 36
	indexs_dec  goto 37
	index_dec  goto 38


state 31
	iden_list_init : iden_list_init . ',' IDEN  (13)
	iden_list_init : iden_list_init . ',' IDEN init  (14)
	iden_list_init : iden_list_init . ',' IDEN indexs_dec array_init  (15)
	iden_list_init : iden_list_init . ',' IDEN indexs_dec  (16)
	extdef : type iden_list_init . ';'  (29)

	';'  shift 52
	','  shift 40
	.  error


state 32
	program : extdefs_no_func first_func_def extdefs .  (2)
	extdefs : extdefs . extdef  (24)

	INT  shift 1
	DOUBLE  shift 2
	BOOL  shift 3
	CHAR  shift 4
	VOID  shift 14
	CONST  shift 15
	$end  reduce 2

	type  goto 17
	extdef  goto 29
	func_def  goto 19


state 33
	extdef_no_func : type IDEN '(' . para_in ')' ';'  (9)
	first_func_def : type IDEN '(' . para_in ')' compound  (106)
	para_in : .  (121)

	INT  shift 1
	DOUBLE  shift 2
	BOOL  shift 3
	CHAR  shift 4
	')'  reduce 121

	type  goto 41
	para_in  goto 53
	paras  goto 43
	para  goto 44


state 34
	init : '=' . expr_no_invoke  (119)

	IDEN  shift 54
	STRING_LIT  shift 55
	INT_LIT  shift 56
	BOOL_LIT  shift 57
	NOT  shift 58
	CHAR_LIT  shift 59
	DOUBLE_LIT  shift 60
	'-'  shift 61
	'('  shift 62
	.  error

	literal  goto 63
	expr  goto 64
	var  goto 65
	expr_no_invoke  goto 66


state 35
	index_dec : '[' . INT_LIT ']'  (129)

	INT_LIT  shift 67
	.  error


state 36
	iden_list_init : IDEN init .  (17)

	.  reduce 17


state 37
	iden_list_init : IDEN indexs_dec . array_init  (19)
	iden_list_init : IDEN indexs_dec .  (20)
	indexs_dec : indexs_dec . index_dec  (127)

	'='  shift 68
	'['  shift 35
	';'  reduce 20
	','  reduce 20

	array_init  goto 69
	index_dec  goto 70


state 38
	indexs_dec : index_dec .  (128)

	.  reduce 128


state 39
	extdef_no_func : type iden_list_init ';' .  (11)

	.  reduce 11


state 40
	iden_list_init : iden_list_init ',' . IDEN  (13)
	iden_list_init : iden_list_init ',' . IDEN init  (14)
	iden_list_init : iden_list_init ',' . IDEN indexs_dec array_init  (15)
	iden_list_init : iden_list_init ',' . IDEN indexs_dec  (16)

	IDEN  shift 71
	.  error


state 41
	para : type . IDEN indexs_dec  (125)
	para : type . IDEN  (126)

	IDEN  shift 72
	.  error


state 42
	extdef_no_func : VOID IDEN '(' para_in . ')' ';'  (10)
	first_func_def : VOID IDEN '(' para_in . ')' compound  (107)

	')'  shift 73
	.  error


state 43
	para_in : paras .  (122)
	paras : paras . ',' para  (123)

	','  shift 74
	')'  reduce 122


state 44
	paras : para .  (124)

	.  reduce 124


state 45
	const_init : '=' . literal  (23)

	STRING_LIT  shift 55
	INT_LIT  shift 56
	BOOL_LIT  shift 57
	CHAR_LIT  shift 59
	DOUBLE_LIT  shift 60
	.  error

	literal  goto 75


state 46
	const_iden_list : IDEN const_init .  (22)

	.  reduce 22


state 47
	extdef_no_func : CONST type const_iden_list ';' .  (12)

	.  reduce 12


state 48
	const_iden_list : const_iden_list ',' . IDEN const_init  (21)

	IDEN  shift 76
	.  error


state 49
	extdef : VOID IDEN '(' . para_in ')' ';'  (27)
	func_def : VOID IDEN '(' . para_in ')' compound  (109)
	para_in : .  (121)

	INT  shift 1
	DOUBLE  shift 2
	BOOL  shift 3
	CHAR  shift 4
	')'  reduce 121

	type  goto 41
	para_in  goto 77
	paras  goto 43
	para  goto 44


state 50
	const_iden_list : const_iden_list . ',' IDEN const_init  (21)
	extdef : CONST type const_iden_list . ';'  (30)

	';'  shift 78
	','  shift 48
	.  error


state 51
	extdef : type IDEN '(' . para_in ')' ';'  (26)
	func_def : type IDEN '(' . para_in ')' compound  (108)
	para_in : .  (121)

	INT  shift 1
	DOUBLE  shift 2
	BOOL  shift 3
	CHAR  shift 4
	')'  reduce 121

	type  goto 41
	para_in  goto 79
	paras  goto 43
	para  goto 44


state 52
	extdef : type iden_list_init ';' .  (29)

	.  reduce 29


state 53
	extdef_no_func : type IDEN '(' para_in . ')' ';'  (9)
	first_func_def : type IDEN '(' para_in . ')' compound  (106)

	')'  shift 80
	.  error


state 54
	var : IDEN . indexs  (5)
	var : IDEN .  (6)
	expr : IDEN . '(' exprs_comma_x ')' ';'  (43)

	'('  shift 81
	'['  shift 82
	IDEN  reduce 6
	SWITCH  reduce 6
	CASE  reduce 6
	DEFAULT  reduce 6
	IF  reduce 6
	FOR  reduce 6
	WHILE  reduce 6
	DO  reduce 6
	RETURN  reduce 6
	CONTINUE  reduce 6
	BREAK  reduce 6
	PLUSPLUS  reduce 6
	MINUSMINUS  reduce 6
	ANDAND  reduce 6
	OROR  reduce 6
	GE  reduce 6
	LE  reduce 6
	EQUAL  reduce 6
	NOTEQUAL  reduce 6
	'>'  reduce 6
	'<'  reduce 6
	'+'  reduce 6
	'-'  reduce 6
	'*'  reduce 6
	'/'  reduce 6
	'%'  reduce 6
	')'  reduce 6
	';'  reduce 6
	','  reduce 6
	'='  reduce 6
	'}'  reduce 6
	']'  reduce 6

	indexs  goto 83
	index  goto 84


state 55
	literal : STRING_LIT .  (141)

	.  reduce 141


state 56
	literal : INT_LIT .  (138)

	.  reduce 138


state 57
	literal : BOOL_LIT .  (140)

	.  reduce 140


state 58
	expr : NOT . expr  (56)
	expr_no_invoke : NOT . expr  (76)

	IDEN  shift 54
	STRING_LIT  shift 55
	INT_LIT  shift 56
	BOOL_LIT  shift 57
	NOT  shift 85
	CHAR_LIT  shift 59
	DOUBLE_LIT  shift 60
	'-'  shift 86
	'('  shift 87
	.  error

	literal  goto 88
	expr  goto 89
	var  goto 90


state 59
	literal : CHAR_LIT .  (137)

	.  reduce 137


state 60
	literal : DOUBLE_LIT .  (139)

	.  reduce 139


state 61
	expr : '-' . expr  (59)
	expr_no_invoke : '-' . expr  (79)

	IDEN  shift 54
	STRING_LIT  shift 55
	INT_LIT  shift 56
	BOOL_LIT  shift 57
	NOT  shift 85
	CHAR_LIT  shift 59
	DOUBLE_LIT  shift 60
	'-'  shift 86
	'('  shift 87
	.  error

	literal  goto 88
	expr  goto 91
	var  goto 90


state 62
	expr : '(' . expr ')'  (60)
	expr_no_invoke : '(' . expr ')'  (80)

	IDEN  shift 54
	STRING_LIT  shift 55
	INT_LIT  shift 56
	BOOL_LIT  shift 57
	NOT  shift 85
	CHAR_LIT  shift 59
	DOUBLE_LIT  shift 60
	'-'  shift 86
	'('  shift 87
	.  error

	literal  goto 88
	expr  goto 92
	var  goto 90


state 63
	expr : literal .  (39)
	expr_no_invoke : literal .  (61)

	ANDAND  reduce 39
	OROR  reduce 39
	GE  reduce 39
	LE  reduce 39
	EQUAL  reduce 39
	NOTEQUAL  reduce 39
	'>'  reduce 39
	'<'  reduce 39
	'+'  reduce 39
	'-'  reduce 39
	'*'  reduce 39
	'/'  reduce 39
	'%'  reduce 39
	';'  reduce 61
	','  reduce 61
	'}'  reduce 61


state 64
	expr : expr . '+' expr  (45)
	expr : expr . '-' expr  (46)
	expr : expr . '*' expr  (47)
	expr : expr . '/' expr  (48)
	expr : expr . '%' expr  (49)
	expr : expr . '>' expr  (50)
	expr : expr . '<' expr  (51)
	expr : expr . GE expr  (52)
	expr : expr . LE expr  (53)
	expr : expr . EQUAL expr  (54)
	expr : expr . NOTEQUAL expr  (55)
	expr : expr . ANDAND expr  (57)
	expr : expr . OROR expr  (58)
	expr_no_invoke : expr . '+' expr  (65)
	expr_no_invoke : expr . '-' expr  (66)
	expr_no_invoke : expr . '*' expr  (67)
	expr_no_invoke : expr . '/' expr  (68)
	expr_no_invoke : expr . '%' expr  (69)
	expr_no_invoke : expr . '>' expr  (70)
	expr_no_invoke : expr . '<' expr  (71)
	expr_no_invoke : expr . GE expr  (72)
	expr_no_invoke : expr . LE expr  (73)
	expr_no_invoke : expr . EQUAL expr  (74)
	expr_no_invoke : expr . NOTEQUAL expr  (75)
	expr_no_invoke : expr . ANDAND expr  (77)
	expr_no_invoke : expr . OROR expr  (78)

	ANDAND  shift 93
	OROR  shift 94
	GE  shift 95
	LE  shift 96
	EQUAL  shift 97
	NOTEQUAL  shift 98
	'>'  shift 99
	'<'  shift 100
	'+'  shift 101
	'-'  shift 102
	'*'  shift 103
	'/'  shift 104
	'%'  shift 105
	.  error


state 65
	expr : var .  (40)
	expr : var . PLUSPLUS  (41)
	expr : var . MINUSMINUS  (42)
	expr : var . '=' IDEN '(' exprs_comma_x ')' ';'  (44)
	expr_no_invoke : var .  (62)
	expr_no_invoke : var . PLUSPLUS  (63)
	expr_no_invoke : var . MINUSMINUS  (64)
